Update github user

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="social-icons">
         <ul class="list-inline">
           <li><a href="https://es.linkedin.com/in/mariavirginiarivas" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="https://github.com/mariav53" target="_blank"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://github.com/mvirginia53" target="_blank"><i class="fa fa-github"></i></a></li>
           <li><a href="https://twitter.com/Mvirginia_53" target="_blank"><i class="fa fa-twitter"></i></a></li>
           <li><a href="https://mvrivas.wordpress.com/" target="_blank"><i class="fa fa-wordpress"></i></a></li>
           <li><a href="https://es.pinterest.com/mvrivas53/redactora-copywritter/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
@@ -94,7 +94,7 @@
           </div>
           <div class="download-button">
             <a class="btn btn-info btn-lg contact-btn" href="#contact"><i class="fa fa-paper-plane"></i>Contacta conmigo</a>
-            <a class="btn btn-primary btn-lg download-btn" href="https://mariav53.github.io/CV_MVIRGINIARIVAS.pdf" target="_blank"><i class="fa fa-download"></i>Descarga mi CV</a>
+            <a class="btn btn-primary btn-lg download-btn" href="https://mvirginia53.github.io/CV_MVIRGINIARIVAS.pdf" target="_blank"><i class="fa fa-download"></i>Descarga mi CV</a>
           </div>
         </div>
 
@@ -296,7 +296,7 @@
       <h3>Email:</h3>
       <p><a href="mailto:mvrivas53@gmail.com">mvrivas53@gmail.com</a></p>
       <a href="https://www.linkedin.com/in/mariavirginiarivas/" target="_blank" rel="noreferrer noopener"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-      <a href="https://github.com/mariav53" target="_blank" rel="noreferrer noopener"><i class="fa fa-github" aria-hidden="true"></i></a>
+      <a href="https://github.com/mvirginia53" target="_blank" rel="noreferrer noopener"><i class="fa fa-github" aria-hidden="true"></i></a>
     </div>
   </section>
 
