--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div id="lead">
     <div id="lead-content">
-      <div class="intro-sub" style="color:#ffffff;"> Front-end developer </div>
+      <div class="intro-sub" style="color:#ffffff;"> Front-end | React developer </div>
       <h1 style="color:#52b3d9;">María Virginia <span style="color:#68c3a3;">Rivas Rodríguez</span></h1>
       <div class="social-icons">
         <ul class="list-inline">
