--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <section>
     <div id="projects">
-      <h2 class="heading">Proyectos</h2>
+      <h2 class="heading">Proyectos personales</h2>
       <div class="projects__item">
         <div class="column__left">
           <div>
