--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <section>
     <div id="projects">
-      <h2 class="heading">Proyectos personales</h2>
+      <h2 class="heading">Proyectos</h2>
       <div class="projects__item">
         <div class="column__left">
           <div>
@@ -126,7 +126,8 @@
         <div class="column__right">
           <h3>Landing page para UrbanData Analytics</h3>
           <p>Proyecto final <a href="http://adalab.es" target="_blank">ADALAB</a>. Crear web para dar a conocer RED api de <a href="http://www.urbandataanalytics.com/">UrbanData Analytics</a>, utilizando React.</p>
-          <p class="viewProject"><a href="https://adalab.github.io/urbanData/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver proyecto</a></p>
+          <p class="viewProject" style="margin-bottom: 0;margin-top: 0;"><a href="https://github.com/mvirginia53/adalab-final-project" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver repositorio</a></p>
+          <p class="viewProject" style="margin-bottom: 0;margin-top: 0;"><a href="https://adalab-final-project-urbandata.netlify.app/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver demo</a></p>
           <div class="tags">
             <span class="tag">REACT</span>
             <span class="tag">HTML</span>
@@ -147,7 +148,7 @@
           <p>Proyecto sprint#4 <a href="http://adalab.es" target="_blank">ADALAB</a>. Refactorizar con React el código heredado del equipo <a href="https://github.com/Adalab/clarke-s2-generatrix" target="_blank">Generatrix</a>, perteneciente al sprint #2
             (currículo interactivo).
           </p>
-          <p class="viewProject"><a href="https://adalab.github.io/clarke-s4-genera3.0/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver proyecto</a></p>
+          <p class="viewProject"><a href="https://github.com/mariav53/resume-webapp-with-react" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver repositorio</a></p>
           <div class="tags">
             <span class="tag">REACT</span>
             <span class="tag">HTML</span>
@@ -166,7 +167,8 @@
         <div class="column__right">
           <h3>Web para proyecto social</h3>
           <p>Proyecto sprint#3 <a href="http://adalab.es" target="_blank">ADALAB</a>. Crear una web para dar difusión al proyecto social "Empleo Joven" de la <a href="http://fmujeresprogresistas.org/" target="_blank">Federación de mujeres progresistas</a>.</p>
-          <p class="viewProject"><a href="https://mariav53.github.io/social-project-web/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver proyecto</a></p>
+          <p class="viewProject" style="margin-bottom: 0;margin-top: 0;"><a href="https://github.com/mariav53/social-project-web/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver repositorio</a></p>
+          <p class="viewProject" style="margin-bottom: 0;margin-top: 0;"><a href="https://mariav53.github.io/social-project-web/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver demo</a></p>
           <div class="tags">
             <span class="tag">HTML</span>
             <span class="tag">CSS</span>
@@ -180,24 +182,6 @@
       <div class="projects__item">
         <div class="column__left">
           <div>
-            <img src="images/project_interactive_resume.jpg" class="project__photo">
-          </div>
-        </div>
-        <div class="column__right">
-          <h3>Currículo Interactivo</h3>
-          <p>Proyecto sprint#2 <a href="http://adalab.es" target="_blank">ADALAB</a>. Crear un currículum de forma interactiva haciendo uso de Javascript.</p>
-          <p class="viewProject"><a href="https://mariav53.github.io/interactive-resume/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver proyecto</a></p>
-          <div class="tags">
-            <span class="tag">HTML</span>
-            <span class="tag">CSS</span>
-            <span class="tag">DISEÑO RESPONSIVE</span>
-            <span class="tag">JAVASCRIPT</span>
-          </div>
-        </div>
-      </div>
-      <div class="projects__item">
-        <div class="column__left">
-          <div>
             <img src="images/project_js_game.jpg" class="project__photo">
           </div>
         </div>
@@ -205,7 +189,7 @@
           <h3>Juego "Adivinar el número"</h3>
           <p>Evaluación sprint#2 <a href="http://adalab.es" target="_blank">ADALAB</a>. Desarrollar una página web con el juego de "Adivinar el número". Consiste en que el juego genera un número al azar entre 1 y 100, y el jugador tiene que adivinarlo, guiándose
             por pistas.</p>
-          <p class="viewProject"><a href="https://mariav53.github.io/assignment-2-guess-my-number/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver proyecto</a></p>
+          <p class="viewProject"><a href="https://mariav53.github.io/assignment-2-guess-my-number/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver demo</a></p>
           <div class="tags">
             <span class="tag">HTML</span>
             <span class="tag">CSS</span>
@@ -222,7 +206,7 @@
         <div class="column__right">
           <h3>Web colaborativa</h3>
           <p>Proyecto sprint#1 <a href="http://adalab.es" target="_blank">ADALAB</a>. Desarrollar nuestra primera web colaborativa con información profesional y social de las integrantes del equipo.</p>
-          <p class="viewProject"><a href="https://mariav53.github.io/collaborative-website/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver proyecto</a></p>
+          <p class="viewProject"><a href="https://mariav53.github.io/collaborative-website/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver demo</a></p>
           <div class="tags">
             <span class="tag">HTML</span>
             <span class="tag">CSS</span>
@@ -240,7 +224,7 @@
           <h3>Central de reserva de salas</h3>
           <p>Proyecto final del programa <a href="https://empleodigitalformacion.fundaciontelefonica.com/" target="_blank">Empleo Digital</a>. Diseñar y desarrollar una web con una central de reserva de salas para centros educativos. Proyecto encargado por
             la empresa <a href="http://www.seidor.es/content/seidorweb/es.html" target="_blank">Seidor</a>.</p>
-          <p class="viewProject"><a href="http://centraldereservas.hol.es/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver proyecto</a></p>
+          <p class="viewProject"><a href="https://github.com/mariav53/central-de-reservas" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> ver repositorio</a></p>
           <div class="tags">
             <span class="tag">PHP</span>
             <span class="tag">MYSQL</span>
@@ -303,12 +287,12 @@
   <footer>
     <div>
       <div class="row row-footer">
-        <div class="col-sm-5 copyright">
+        <div class="col-sm-5 copyright" style="margin-bottom: 14px;">
           <p>Copyright &copy; 2018 Maria Virginia Rivas</p>
         </div>
         <div class="col-sm-2 top">
           <span id="to-top">
-            	  <i class="fa fa-chevron-up" aria-hidden="true" onclick><a href="#menu"</a></i>
+            <a href="#menu"><i class="fa fa-chevron-up" aria-hidden="true" onclick></a></i>
               </span>
         </div>
       </div>
